tests/snapshots/test_from_file__blank_lines.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: ~
problem_sense: Minimize
variables:
  x: Binary
  y: Binary
  z: Binary
objectives:
  - name: obj
    coefficients:
      - var_name: x
        coefficient: 1
      - var_name: y
        coefficient: 10
constraints:
  "r01:":
    Standard:
      name: "r01:"
      coefficients:
        - var_name: x
          coefficient: 1
        - var_name: y
          coefficient: 1
      sense: ">="
      rhs: 1
