tests/snapshots/test_from_file__limbo.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  con_2026:
    Standard:
      name: con_2026
      coefficients:
        - coefficient: -2
          var_name: b_5829890_x2
        - coefficient: 2
          var_name: b_5829890_x1
      sense: "<="
      rhs: -64
  con_2027:
    Standard:
      name: con_2027
      coefficients:
        - coefficient: 1
          var_name: b_5880854_x2
        - coefficient: -1
          var_name: b_5880854_x1
      sense: ">="
      rhs: 32
objectives:
  - coefficients:
      - coefficient: 1
        var_name: b_5829890_x2
    name: obj_2024
  - coefficients:
      - coefficient: 1
        var_name: b_5880854_x2
    name: obj_2025
problem_name: ~
problem_sense: Minimize
variables:
  b_5829890_x1: Binary
  b_5829890_x2: General
  b_5880854_x1:
    LB: 10
  b_5880854_x2: General
