tests/snapshots/test_from_file__obj_1cons_all_variables_with_bounds.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: ~
problem_sense: Maximize
variables:
  x: General
  y:
    Bounded:
      - 10
      - 12
      - false
  z: Binary
objectives:
  - name: cost
    coefficients:
      - var_name: x
        coefficient: -2
      - var_name: y
        coefficient: -3
      - var_name: z
        coefficient: 4
constraints:
  "cons:":
    Standard:
      name: "cons:"
      coefficients:
        - var_name: x
          coefficient: 4.4
        - var_name: y
          coefficient: 5.5
        - var_name: z
          coefficient: 6.6
      sense: "<="
      rhs: 120
