tests/snapshots/test_from_file__output.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "cons0:":
    Standard:
      name: "cons0:"
      coefficients:
        - coefficient: 2
          var_name: x0
        - coefficient: 8
          var_name: x1
        - coefficient: 4
          var_name: x2
      sense: "<="
      rhs: 10
  "cons1:":
    Standard:
      name: "cons1:"
      coefficients:
        - coefficient: 2
          var_name: x3
        - coefficient: 5
          var_name: x4
      sense: "<="
      rhs: 11
objectives:
  - coefficients:
      - coefficient: 5
        var_name: x0
      - coefficient: 3
        var_name: x1
      - coefficient: 2
        var_name: x2
      - coefficient: 7
        var_name: x3
      - coefficient: 4
        var_name: x4
    name: obj
problem_name: ClpDefaultName
problem_sense: Minimize
variables:
  x0:
    Bounded:
      - 0
      - 1
      - false
  x1:
    Bounded:
      - 0
      - 1
      - false
  x2:
    Bounded:
      - 0
      - 1
      - false
  x3:
    Bounded:
      - 0
      - 1
      - false
  x4:
    Bounded:
      - 0
      - 1
      - false
