tests/snapshots/test_from_file__output2_1.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "cons0:":
    Standard:
      name: "cons0:"
      coefficients:
        - coefficient: 1
          var_name: x0
        - coefficient: 1
          var_name: x1
      sense: "<="
      rhs: 21.1
  "cons0_low:":
    Standard:
      name: "cons0_low:"
      coefficients:
        - coefficient: 1
          var_name: x0
        - coefficient: 1
          var_name: x1
      sense: ">="
      rhs: 0
  "cons1:":
    Standard:
      name: "cons1:"
      coefficients:
        - coefficient: 1
          var_name: x2
        - coefficient: 1
          var_name: x3
      sense: "<="
      rhs: 22.2
  "cons1_low:":
    Standard:
      name: "cons1_low:"
      coefficients:
        - coefficient: 1
          var_name: x2
        - coefficient: 1
          var_name: x3
      sense: ">="
      rhs: 0
  "cons2:":
    Standard:
      name: "cons2:"
      coefficients:
        - coefficient: 1
          var_name: x4
        - coefficient: 1
          var_name: x5
      sense: "<="
      rhs: 23.3
  "cons2_low:":
    Standard:
      name: "cons2_low:"
      coefficients:
        - coefficient: 1
          var_name: x4
        - coefficient: 1
          var_name: x5
      sense: ">="
      rhs: 0
objectives:
  - coefficients:
      - coefficient: 2.1
        var_name: x0
      - coefficient: 1000
        var_name: x1
      - coefficient: 2.2
        var_name: x2
      - coefficient: 1000
        var_name: x3
      - coefficient: 2.3
        var_name: x4
      - coefficient: 1000
        var_name: x5
    name: obj
problem_name: ClpDefaultName
problem_sense: Minimize
variables:
  x0:
    Bounded:
      - 0
      - 21.1
      - false
  x1: General
  x2:
    Bounded:
      - 0
      - 22.2
      - false
  x3: General
  x4:
    Bounded:
      - 0
      - 23.3
      - false
  x5: General
