tests/snapshots/test_from_file__output2_2.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "cons0:":
    Standard:
      name: "cons0:"
      coefficients:
        - coefficient: 1
          var_name: x0
        - coefficient: 1
          var_name: x1
      sense: "<="
      rhs: 21.1
  "cons1:":
    Standard:
      name: "cons1:"
      coefficients:
        - coefficient: 1
          var_name: x2
        - coefficient: 1
          var_name: x3
      sense: "<="
      rhs: 22.2
  "cons2:":
    Standard:
      name: "cons2:"
      coefficients:
        - coefficient: 1
          var_name: x4
        - coefficient: 1
          var_name: x5
      sense: "<="
      rhs: 23.3
  "cons3:":
    Standard:
      name: "cons3:"
      coefficients:
        - coefficient: 1
          var_name: x6
      sense: "<="
      rhs: 11.1
  "cons4:":
    Standard:
      name: "cons4:"
      coefficients:
        - coefficient: 1
          var_name: x7
      sense: "<="
      rhs: 12.2
  "cons5:":
    Standard:
      name: "cons5:"
      coefficients:
        - coefficient: 1
          var_name: x8
      sense: "<="
      rhs: 13.3
objectives:
  - coefficients:
      - coefficient: 2.1
        var_name: x0
      - coefficient: 1000
        var_name: x1
      - coefficient: 2.2
        var_name: x2
      - coefficient: 1000
        var_name: x3
      - coefficient: 2.3
        var_name: x4
      - coefficient: 1000
        var_name: x5
      - coefficient: 1.1
        var_name: x6
      - coefficient: 1.2
        var_name: x7
      - coefficient: 1.3
        var_name: x8
    name: obj
problem_name: ClpDefaultName
problem_sense: Minimize
variables:
  x0:
    Bounded:
      - 0
      - 21.1
      - false
  x1: General
  x2:
    Bounded:
      - 0
      - 22.2
      - false
  x3: General
  x4:
    Bounded:
      - 0
      - 23.3
      - false
  x5: General
  x6:
    Bounded:
      - 0
      - 11.1
      - false
  x7:
    Bounded:
      - 0
      - 12.2
      - false
  x8:
    Bounded:
      - 0
      - 13.3
      - false
